- get riders and rides
